- Add a custom modal that displays my social media accounts.

--- a/src/app/core/contact-me/contact-me.component.html
+++ b/src/app/core/contact-me/contact-me.component.html
@@ -1,1 +1,33 @@
-<p>contact-me works!</p>
+<div class="modal fade" id="modal-signin" tabindex="-1" style="display: none;" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content border-0">
+            <div class="cs-view" id="modal-signin-view">
+                <div class="modal-header border-0 bg-dark px-4">
+                    <h4 class="modal-title text-light">Contact Me</h4>
+                    <button class="close text-light" type="button" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">×</span></button>
+                </div>
+                <div class="modal-body px-4">
+                    <p class="font-size-ms text-muted">I am available for hire and open to any ideas of cooperation.</p>
+                    
+                </div>
+            </div>
+            <div class="cs-view show" id="modal-signup-view">
+                <div class="modal-header border-0 bg-dark px-4">
+                    <h4 class="modal-title text-light">Contacts</h4>
+                    <button class="close text-light" type="button" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">×</span></button>
+                </div>
+
+            </div>
+            <div class="modal-body text-center px-4 pt-2 pb-4">
+
+                <p class="font-size-sm font-weight-medium text-heading pt-4">contacts</p><a
+                    class="social-btn sb-facebook sb-lg mx-1 mb-2" href="#"><i class="fe-facebook"></i></a><a
+                    class="social-btn sb-twitter sb-lg mx-1 mb-2" href="#"><i class="fe-twitter"></i></a><a
+                    class="social-btn sb-instagram sb-lg mx-1 mb-2" href="#"><i class="fe-instagram"></i></a><a
+                    class="social-btn sb-google sb-lg mx-1 mb-2" href="#"><i class="fe-google"></i></a>
+            </div>
+        </div>
+    </div>
+</div>
