--- a/src/app/core/contact-me/contact-me.component.html
+++ b/src/app/core/contact-me/contact-me.component.html
@@ -23,10 +23,10 @@
             <div class="modal-body text-center px-4 pt-2 pb-4">
 
                 <p class="font-size-sm font-weight-medium text-heading pt-4">contacts</p><a
-                    class="social-btn sb-facebook sb-lg mx-1 mb-2" href="#"><i class="fe-facebook"></i></a><a
-                    class="social-btn sb-twitter sb-lg mx-1 mb-2" href="#"><i class="fe-twitter"></i></a><a
+                    class="social-btn sb-facebook sb-lg mx-1 mb-2" target="_blank" href="https://www.facebook.com/lucas.wairore"><i class="fe-facebook"></i></a><a
+                    class="social-btn sb-twitter sb-lg mx-1 mb-2" target="_blank" href="https://twitter.com/kwairore"><i class="fe-twitter"></i></a><a
                     class="social-btn sb-instagram sb-lg mx-1 mb-2" href="#"><i class="fe-instagram"></i></a><a
-                    class="social-btn sb-google sb-lg mx-1 mb-2" href="#"><i class="fe-google"></i></a>
+                    class="social-btn sb-mail sb-lg mx-1 mb-2" href="mailto:kwairore@gmail.com"><i class="fe-mail"></i></a>
             </div>
         </div>
     </div>
