- Add Github contacts. - Add Gmail contacts. - Add LinkedIn contacts.

--- a/src/app/core/contact-me/contact-me.component.html
+++ b/src/app/core/contact-me/contact-me.component.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="modal-body px-4">
                     <p class="font-size-ms text-muted">I am available for hire and open to any ideas of cooperation.</p>
-                    
+
                 </div>
             </div>
             <div class="cs-view show" id="modal-signup-view">
@@ -18,15 +18,30 @@
                     <button class="close text-light" type="button" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">×</span></button>
                 </div>
+                <div class="modal-body px-4">
+                    <p class="font-size-ms text-muted">I am available for hire and open to any ideas of cooperation.</p>
+                  </div>
 
             </div>
             <div class="modal-body text-center px-4 pt-2 pb-4">
-
-                <p class="font-size-sm font-weight-medium text-heading pt-4">contacts</p><a
-                    class="social-btn sb-facebook sb-lg mx-1 mb-2" target="_blank" href="https://www.facebook.com/lucas.wairore"><i class="fe-facebook"></i></a><a
-                    class="social-btn sb-twitter sb-lg mx-1 mb-2" target="_blank" href="https://twitter.com/kwairore"><i class="fe-twitter"></i></a><a
-                    class="social-btn sb-instagram sb-lg mx-1 mb-2" href="#"><i class="fe-instagram"></i></a><a
-                    class="social-btn sb-mail sb-lg mx-1 mb-2" href="mailto:kwairore@gmail.com"><i class="fe-mail"></i></a>
+<hr>
+                <p class="font-size-sm font-weight-medium text-heading pt-4">contacts</p>
+                <a class="social-btn sb-facebook sb-lg mx-1 mb-2" target="_blank"
+                    href="https://www.facebook.com/lucas.wairore"><i class="fe-facebook"></i>
+                </a>
+                <a class="social-btn sb-twitter sb-lg mx-1 mb-2" target="_blank" href="https://twitter.com/kwairore"><i
+                        class="fe-twitter"></i>
+                </a>
+                <a class="social-btn sb-instagram sb-lg mx-1 mb-2" href="#"><i class="fe-instagram"></i>
+                </a>
+                <a class="social-btn sb-linkedin sb-lg mx-1 mb-2" target="_blank"
+                    href="https://www.linkedin.com/in/lucas-wairore/"><i class="fe-linkedin"></i>
+                </a>
+                <a class="social-btn sb-github sb-lg mx-1 mb-2" target="_blank" href="https://github.com/lwairore"><i
+                        class="fe-github"></i>
+                </a>
+                <a class="social-btn sb-mail sb-lg mx-1 mb-2" href="mailto:kwairore@gmail.com"><i
+                        class="fe-mail"></i></a>
             </div>
         </div>
     </div>
