--- a/src/app/homepage/portfolio-cards/portfolio-cards.component.html
+++ b/src/app/homepage/portfolio-cards/portfolio-cards.component.html
@@ -1,1 +1,12 @@
-<p>portfolio-cards works!</p>
+<div class="cs-masonry-grid" data-columns="3">
+    <div *ngFor="let project of projects" class="cs-grid-item">
+        <a class="card card-hover border-0 box-shadow"
+            [routerLink]="['/project', project.slug]"><img class="card-img-top" [src]="project.portfolioThumb"
+                [alt]="'Portfolio thumb for  ' + project.heading" />
+            <div class="card-body text-center">
+                <h3 class="h5 nav-heading mb-2">{{project.heading}}</h3>
+                <p class="font-size-sm text-muted mb-2">UI / UX Design, Web Development</p>
+            </div>
+        </a></div>
+
+</div>
