- Use the NgIf directive to add or remove ContactMeComponent, and HeaderComponent dynamically depending on the value of loading. - Add a Bootstrap spinner element that is hidden when loading is false.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<lwkp-contact-me></lwkp-contact-me>
-<lwkp-header></lwkp-header>
+<lwkp-contact-me *ngIf="!loading"></lwkp-contact-me>
+<lwkp-header *ngIf="!loading"></lwkp-header>
 <router-outlet></router-outlet>
+ <!-- Page loading styles-->
+ <div [hidden]="!loading" class="cs-page-loading active">
+    <div class="cs-page-loading-inner">
+      <div class="cs-page-spinner"></div><span>Loading...</span>
+    </div>
+  </div>
