- Remove class property on header element. - Add lwkpTransformNavbar selector to header element.

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,8 +1,8 @@
-<header class="cs-header navbar navbar-expand-lg navbar-dark navbar-floating navbar-sticky" data-scroll-header>
+<header lwkpTransformNavbar data-scroll-header>
     <div class="container px-0 px-xl-3">
         <a class="navbar-brand order-lg-1 mx-auto ml-lg-0 pr-lg-2 mr-lg-4" href="index.html"><img
-                class="navbar-floating-logo d-none d-lg-block" width="153" src="/assets/img/me.png" alt="Around" /><img
-                class="navbar-stuck-logo" width="153" src="/assets/img/me.png" alt="Around" /><img class="d-lg-none"
+                class="navbar-floating-logo d-none d-lg-block" width="58" src="/assets/img/me.png" alt="Around" /><img
+                class="navbar-stuck-logo" width="58" src="/assets/img/me.png" alt="Around" /><img class="d-lg-none"
                 width="58" src="/assets/img/me.png" alt="Around" /></a>
         <div class="d-flex align-items-center order-lg-3 ml-lg-auto"><a class="btn btn-primary" href="#modal-signin"
                 data-toggle="modal" data-view="#modal-signup-view">Contact Me</a></div>
