- Instead of passing the entire projectDetails to ProjectTitleComponent child component, create an object that only has heading and tags properties extracting their respective values from projectDetails.

--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,1 +1,3 @@
-<lwkp-project-title [projectDetails]="projectDetails"></lwkp-project-title>
+<lwkp-project-title [projectDetails]="{
+                                        'heading': projectDetails.heading,
+                                        'tags': projectDetails.tags}"></lwkp-project-title>
