--- a/src/app/project-detail/project-title/project-title.component.html
+++ b/src/app/project-detail/project-title/project-title.component.html
@@ -1,1 +1,9 @@
-<p>project-title works!</p>
+<section class="container pt-7">
+    <h1 class="h2 pt-4 pt-md-5 mt-2">{{projectDetails?.heading}}</h1>
+    <div class="d-sm-flex alitgn-itams-center pt-3 font-size-sm">
+        <div class="d-flex align-items-center mb-3">
+            <div class="text-nowrap text-muted mr-3"><i class="fe-calendar mr-1"></i><span>Aug 28, 2020</span></div>
+            <div class="text-nowrap text-muted"><i class="fe-tag mr-1"></i><span>3D Modelling</span></div>
+        </div>
+    </div>
+</section>
