- Add and pass liveLink property.

--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,3 +1,5 @@
 <lwkp-project-title [projectDetails]="{
-                                        'heading': projectDetails.heading,
-                                        'tags': projectDetails.tags}"></lwkp-project-title>
+                                        'heading': projectDetails?.heading,
+                                        'tags': projectDetails?.tags,
+                                        'liveLink': projectDetails?.liveLink
+                                    }"></lwkp-project-title>
