- Pass createdAt property to ProjectTitleComponent.

--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,5 +1,6 @@
 <lwkp-project-title [projectDetails]="{
                                         'heading': projectDetails?.heading,
                                         'tags': projectDetails?.tags,
-                                        'liveLink': projectDetails?.liveLink
+                                        'liveLink': projectDetails?.liveLink,
+                                        'createdAt': projectDetails?.createdAt
                                     }"></lwkp-project-title>
