--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -4,3 +4,7 @@
                                         'liveLink': projectDetails?.liveLink,
                                         'createdAt': projectDetails?.createdAt
                                     }"></lwkp-project-title>
+<div class="container">
+    <!-- Project gallery (carousel)-->
+    <lwkp-project-gallery></lwkp-project-gallery>
+</div>
