- Pass the value of projectGallery property to propertyGallery on ProjectGalleryComponent.

--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -6,5 +6,5 @@
                                     }"></lwkp-project-title>
 <div class="container">
     <!-- Project gallery (carousel)-->
-    <lwkp-project-gallery></lwkp-project-gallery>
+    <lwkp-project-gallery [propertyGallery]="projectDetails?.projectGallery"></lwkp-project-gallery>
 </div>
