- Bind propertyGallery value to src.

--- a/src/app/project-detail/project-gallery/project-gallery.component.html
+++ b/src/app/project-detail/project-gallery/project-gallery.component.html
@@ -1,1 +1,15 @@
-<p>project-gallery works!</p>
+<section class="pt-4 mt-lg-2 pb-lg-4">
+    <div class="cs-carousel cs-controls-inside cs-controls-onhover mb-4 mb-lg-0">
+        <div class="tns-outer" id="tns1-ow">
+            <div id="tns1-mw" class="tns-ovh">
+                <div class="tns-inner" id="tns1-iw">
+                    <div class="cs-carousel-inner  tns-slider " id="tns1">
+                        <div class="tns-item" aria-hidden="true" tabindex="-1"><img class="d-block w-100 rounded-lg"
+                                [src]="propertyGallery" alt="Project image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
