--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -7,4 +7,6 @@
 <div class="container">
     <!-- Project gallery (carousel)-->
     <lwkp-project-gallery [propertyGallery]="projectDetails?.projectGallery"></lwkp-project-gallery>
+    <!-- Project description -->
+    <lwkp-project-description></lwkp-project-description>
 </div>
