--- a/src/app/project-detail/project-description/project-description.component.html
+++ b/src/app/project-detail/project-description/project-description.component.html
@@ -14,7 +14,7 @@
             </ul>
             <h3 class="h5">Objective</h3>
             <p class="font-size-sm mb-4 pb-2">{{projectDescription?.objective}}</p>
-            <h3 class="h5">Tools &amp; Technologies</h3>
+            <h3 class="h5">Tools & Technologies</h3>
             <p class="font-size-sm mb-4 pb-2">
                 <span *ngFor="let item of projectDescription?.tags; let l=last">
                     <a [href]="item.resourceURL" target="_blank" [title]="item.description">{{item.title}}</a>
