--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <header lwkpTransformNavbar data-scroll-header>
     <div class="container px-0 px-xl-3">
-        <button class="navbar-toggler ml-n2 mr-2" (click)="goBack();" type="button">
+        <button [hidden]="!showBackButton" class="navbar-toggler ml-n2 mr-2" (click)="goBack();" type="button">
             <div class="text-nowrap text-muted mr-3">
                 <i class="fe-arrow-left mr-1"></i><span>Back</span>
             </div>
