- Update about me.

--- a/src/app/homepage/page-title/page-title.component.html
+++ b/src/app/homepage/page-title/page-title.component.html
@@ -1,11 +1,19 @@
 <!-- Page title-->
-<section class="position-relative bg-dark pt-7 pb-5 pb-md-7 bg-size-cover bg-fixed" [style.background-image]="'url(/assets/img/cubes-bg.jpg)'">
-    <div class="cs-shape cs-shape-bottom cs-shape-curve bg-body">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3000 185.4">
-        <path fill="currentColor" d="M3000,0v185.4H0V0c496.4,115.6,996.4,173.4,1500,173.4S2503.6,115.6,3000,0z"></path>
-      </svg>
-    </div>
-    <div class="container bg-overlay-content text-center pt-md-6 pt-lg-7 py-5 my-lg-3">
-        <h1 class="text-light mb-0">Lucas Wairore<span class="h2 d-inline-block bg-faded-primary text-primary px-3 py-2 rounded-lg ml-3">Full Stack Developer</span></h1><h5 class="text-light mb-0">A logical and creative thinker who enjoys learning new languages, frameworks and technologies in general , excited to be part of the future of the technology industry and my outstanding skills will play an essential role to keep code DRY and as re-factored as possible. The satisfaction of solving problems is what drives me to be better programmer. A business background combined with the entrepreneurial skill can be utilized for aligning profitable goals when programming. Passionate about travel, the outdoors, film, exercising meeting new people and exploring the world.</h5>
-      </div>
-  </section>
+<section class="position-relative bg-dark pt-7 pb-5 pb-md-7 bg-size-cover bg-fixed"
+  [style.background-image]="'url(/assets/img/cubes-bg.jpg)'">
+  <div class="cs-shape cs-shape-bottom cs-shape-curve bg-body">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3000 185.4">
+      <path fill="currentColor" d="M3000,0v185.4H0V0c496.4,115.6,996.4,173.4,1500,173.4S2503.6,115.6,3000,0z"></path>
+    </svg>
+  </div>
+  <div class="container bg-overlay-content text-center pt-md-6 pt-lg-7 py-5 my-lg-3">
+    <h1 class="text-light mb-0">Lucas Wairore<span
+        class="h2 d-inline-block bg-faded-primary text-primary px-3 py-2 rounded-lg ml-3">Full Stack Developer</span>
+    </h1>
+    <h5 class="text-light mb-0">An Angular developer, a Python Flask developer, and a Django developer. In his spare time, he is writing for 
+      <a href="https://medium.com/@kwairore" target="_blank">Medium</a> and 
+      <a href="https://www.linkedin.com/in/lucas-wairore/" target="_blank">LinkedIn</a> 
+      about the latest technology and web development. He is aspiring to be a successful businessman in future.
+    </h5>
+  </div>
+</section>
