- Update href and add target attribute to instagram icon.

--- a/src/app/core/contact-me/contact-me.component.html
+++ b/src/app/core/contact-me/contact-me.component.html
@@ -32,7 +32,7 @@
                 <a class="social-btn sb-twitter sb-lg mx-1 mb-2" target="_blank" href="https://twitter.com/kwairore"><i
                         class="fe-twitter"></i>
                 </a>
-                <a class="social-btn sb-instagram sb-lg mx-1 mb-2" href="#"><i class="fe-instagram"></i>
+                <a class="social-btn sb-instagram sb-lg mx-1 mb-2" href="https://instagram.com/kwairore" target="_blank"><i class="fe-instagram"></i>
                 </a>
                 <a class="social-btn sb-linkedin sb-lg mx-1 mb-2" target="_blank"
                     href="https://www.linkedin.com/in/lucas-wairore/"><i class="fe-linkedin"></i>
