--- a/src/app/core/contact-me/contact-me.component.html
+++ b/src/app/core/contact-me/contact-me.component.html
@@ -20,16 +20,17 @@
                 </div>
                 <div class="modal-body px-4">
                     <p class="font-size-ms text-muted">I am available for hire and open to any ideas of cooperation.</p>
-                  </div>
+                </div>
 
             </div>
             <div class="modal-body text-center px-4 pt-2 pb-4">
-<hr>
+                <hr>
                 <p class="font-size-sm font-weight-medium text-heading pt-4">contacts</p>
                 <a class="social-btn sb-twitter sb-lg mx-1 mb-2" target="_blank" href="https://twitter.com/kwairore"><i
                         class="fe-twitter"></i>
                 </a>
-                <a class="social-btn sb-instagram sb-lg mx-1 mb-2" href="https://instagram.com/kwairore" target="_blank"><i class="fe-instagram"></i>
+                <a class="social-btn sb-instagram sb-lg mx-1 mb-2" href="https://instagram.com/kwairore"
+                    target="_blank"><i class="fe-instagram"></i>
                 </a>
                 <a class="social-btn sb-linkedin sb-lg mx-1 mb-2" target="_blank"
                     href="https://www.linkedin.com/in/lucas-wairore/"><i class="fe-linkedin"></i>
@@ -39,6 +40,8 @@
                 </a>
                 <a class="social-btn sb-mail sb-lg mx-1 mb-2" href="mailto:kwairore@gmail.com"><i
                         class="fe-mail"></i></a>
+                <a target="_blank" href="tel:+254745520876" class="social-btn sb-phone sb-lg mx-1 mb-2"><i
+                        class="fe-phone"></i></a>
             </div>
         </div>
     </div>
