- Update image href to navigate to '/all'.

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,7 +5,7 @@
                 <i class="fe-arrow-left mr-1"></i><span>Back</span>
             </div>
         </button>
-        <a class="navbar-brand order-lg-1 mx-auto ml-lg-0 pr-lg-2 mr-lg-4" href="index.html"><img
+        <a class="navbar-brand order-lg-1 mx-auto ml-lg-0 pr-lg-2 mr-lg-4" href="/all"><img
                 class="navbar-floating-logo d-none d-lg-block" width="58" src="/assets/img/me.png" alt="Around" /><img
                 class="navbar-stuck-logo" width="58" src="/assets/img/me.png" alt="Around" /><img class="d-lg-none"
                 width="58" src="/assets/img/me.png" alt="Around" /></a>
