- Add Python tag. - Remove data-group attributes.

--- a/src/app/homepage/portfolio-grid/portfolio-grid.component.html
+++ b/src/app/homepage/portfolio-grid/portfolio-grid.component.html
@@ -2,10 +2,11 @@
 <section class="container overflow-hidden py-5 py-md-6 py-lg-7">
     <div class="cs-masonry-filterable pt-3 pt-md-0">
         <ul class="cs-masonry-filters nav nav-tabs justify-content-center pb-4">
-            <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="/all"  data-group="all">All</a></li>
-            <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="/angular" data-group="Angular">Angular</a></li>
-            <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="/django" data-group="django">Django</a></li>
-            <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="/flask" data-group="flask">Flask</a></li>
+            <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="/all">All</a></li>
+            <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="/angular">Angular</a></li>
+            <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="/django">Django</a></li>
+            <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="/flask">Flask</a></li>
+            <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="/python">Python</a></li>
         </ul>
         <router-outlet></router-outlet>
     </div>
