- Pass dockerhubRepo property to projectDescription object only if it's available by use of a safe navigation.

--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -11,6 +11,7 @@
     <lwkp-project-description [projectDescription]="{
         'name': projectDetails?.heading,
         'githubRepo': projectDetails?.githubRepo,
+        'dockerhubRepo': projectDetails?.dockerhubRepo,
         'liveLink': projectDetails?.liveLink,
         'objective': projectDetails?.objective,
         'tags': projectDetails?.tags,
