--- a/src/app/project-detail/project-description/project-description.component.html
+++ b/src/app/project-detail/project-description/project-description.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="col-md-7 pt-4 pt-md-0 mb-lg-4 pb-lg-2">
             <h3 class="h5">Description</h3>
-            <p [style.white-space]="'pre-line'" class="font-size-sm">{{projectDescription?.description}}</p>
+            <p [style.white-space]="'pre-line'" class="font-size-sm" [innerHTML]="projectDescription?.description"></p>
             <h3 class="h5">User stories</h3>
             <div [style.white-space]="'pre-line'" class="font-size-sm">
                 As a user of the application I should be able to:
