--- a/src/app/project-detail/project-description/project-description.component.html
+++ b/src/app/project-detail/project-description/project-description.component.html
@@ -34,6 +34,7 @@
         <div class="col-md-7 pt-4 pt-md-0 mb-lg-4 pb-lg-2">
             <h3 class="h5">Description</h3>
             <p [style.white-space]="'pre-line'" class="font-size-sm" [innerHTML]="projectDescription?.description"></p>
+            <ng-container *ngIf="projectDescription.userStories">
             <h3 class="h5">User stories</h3>
             <div [style.white-space]="'pre-line'" class="font-size-sm">
                 As a user of the application I should be able to:
@@ -42,6 +43,7 @@
                     <li *ngFor="let item of projectDescription?.userStories">{{item}}</li>
                 </ul>
             </div>
+        </ng-container>
 
         </div>
     </div>
